Add mysql datasource support

--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -12,6 +12,7 @@ Below are the currently supported Data Sources:
 - ClickHouse
 - AWS Athena
 - Postgres
+- Mysql/MariaDB
 - PrestoDB (and Trino)
 - Mixpanel
 - Google Analytics
