--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -12,7 +12,7 @@ Below are the currently supported Data Sources:
 - ClickHouse
 - AWS Athena
 - Postgres
-- Mysql/MariaDB
+- MySQL/MariaDB
 - PrestoDB (and Trino)
 - Mixpanel
 - Google Analytics
