Added SRM image and fixed typo

--- a/packages/docs/pages/statistics.mdx
+++ b/packages/docs/pages/statistics.mdx
@@ -62,7 +62,7 @@ These checks help ensure that there are no implementation errors with an experim
 
 ![SRM check failed](/images/SRM-check-failed.png)
 
-## Dimentional Breakdowns
+## Dimensional Analysis
 
 There is often a desire to drill down into results to see how segments or dimensions 
 of your users were affected by an A/B test variation. There are some caveats in doing this 
