--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -11,10 +11,10 @@ The Growth Book docker container supports a number of environment variables:
 - **NODE_ENV** - Set to "production" to turn on additional optimizations and API request logging
 - **JWT_SECRET** - Auth signing key (use a long random string)
 - **ENCRYPTION_KEY** - Data source credential encryption key (use a long random string)
-- **APP_ORIGIN** - Used for CORS (default set to http://localhost:3000)
 - **MONGODB_URI** - The MongoDB connection string
-- **DISABLE_TELEMETRY** - We collect anonymous telemetry data to help us improve Growth Book. Set to "true" to disable.
+- **APP_ORIGIN** - Used for CORS (default set to http://localhost:3000)
 - **API_HOST** - (default set to http://localhost:3100)
+- **DISABLE_TELEMETRY** - We collect anonymous telemetry data to help us improve Growth Book. Set to "true" to disable.
 - Email SMTP Settings (required for sending experiment alerts and team member invites):
   - **EMAIL_ENABLED** ("true" or "false")
   - **EMAIL_HOST**
@@ -47,17 +47,14 @@ Here's an example of switching to ports `4000` and `4100` in `docker-compose.yml
     ports:
       - "4000:3000"
       - "4100:3100"
-    depends_on:
-      - mongo
     environment:
       - APP_ORIGIN=http://localhost:4000
       - API_HOST=http://localhost:4100
-      ...
 ```
 
 Now your app would be available on [http://localhost:4000](http://localhost:4000)
 
-## config.yml
+## Config.yml
 
 In order to use Growth Book, you need to connect to a data source and define metrics (and optionally dimensions). There are two ways to do this.
 
