Add SSL setting for postgres and redshift connections. Fixes #50

--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -128,6 +128,7 @@ params:
   user: root
   password: password
   database: growthbook
+  ssl: false # ssl setting only works for postgres and redshift currently
 ```
 
 #### Snowflake
