--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -285,6 +285,8 @@ userIdType: "user" # or "anonymous" or "either"
 # Any user with a higher metric amount will be capped at this value
 # In this case, if someone bought a $10,000 order, it would only be counted as $100
 cap: 100
+# Days the user have to convert on this metric after being put in an experiment
+conversionWindowDays: 3
 # Arbitrary tags used to group related metrics
 tags:
   - revenue
