--- a/packages/docs/pages/app/metrics.mdx
+++ b/packages/docs/pages/app/metrics.mdx
@@ -77,11 +77,11 @@ We recommend setting this at the 99th percentile in most cases.
 
 ### Conversion Window
 
-The number of days the user has to convert after first being put into an experiment (default = `3`). Any conversions that happens after this time will be ignored.  As always there's a tradeoff here.
+The number of hours the user has to convert after first being put into an experiment (default = `72`). Any conversions that happens after this time will be ignored. As always there's a tradeoff here.
 
 The lower you set this, the more you can be sure that your experiment directly contributed to the metric conversion. For example, a user who views your new checkout page and then completes the purchase right away is a much stronger signal than someone viewing your checkout page and then finally completing the purchase 7 days later.
 
-However, setting this too low can exclude valid conversions.  In the above example, maybe your new checkout page is more memorable and makes people more likely to return later. With a short conversion window you wouldn't be able to capture this data.
+However, setting this too low can exclude valid conversions. In the above example, maybe your new checkout page is more memorable and makes people more likely to return later. With a short conversion window you wouldn't be able to capture this data.
 
 ### Converted Users Only
 
