Add visualEditorEnabled flag to config.yml, simplify settings page.

--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -397,6 +397,8 @@ Below are all of the currently supported settings:
 ```yml
 organization:
   settings:
-    # Minimum experiment length (in days) when importing past experiments
-    pastExperimentsMinLength: 6
+    # Enable creating experiments using the Visual Editor (beta).  Default `false`
+    visualEditorEnabled: true
+    # Minimum experiment length (in days) when importing past experiments. Default `6`
+    pastExperimentsMinLength: 3
 ```
