--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -97,9 +97,7 @@ datasources:
             anonymous_id,
             received_at as timestamp,
             experiment_id,
-            variation_id,
-            context_page_path as url,
-            context_user_agent as user_agent
+            variation_id
           FROM
             experiment_viewed
         pageviewsQuery: >
@@ -107,8 +105,7 @@ datasources:
             user_id,
             anonymous_id,
             received_at as timestamp,
-            path as url,
-            context_user_agent as user_agent
+            path as url
           FROM
             pages
 metrics:
@@ -236,9 +233,7 @@ settings:
         anonymous_id,
         received_at as timestamp,
         experiment_id,
-        variation_id,
-        context_page_path as url,
-        context_user_agent as user_agent
+        variation_id
       FROM
         experiment_viewed
     # This query returns one row for every page view on your site
@@ -248,8 +243,7 @@ settings:
         user_id,
         anonymous_id,
         received_at as timestamp,
-        path as url,
-        context_user_agent as user_agent
+        path as url
       FROM
         pages
 ```
@@ -268,7 +262,6 @@ settings:
     variationIdProperty: variation_id
     pageviewEvent: Page View
     urlProperty: url
-    userAgentProperty: user_agent
 ```
 
 ### Metrics
