Remove need for users SQL query

--- a/packages/docs/pages/self-host/index.mdx
+++ b/packages/docs/pages/self-host/index.mdx
@@ -66,7 +66,7 @@ Then, just run `docker-compose up -d` to start everything and view the app at [h
 
 ## Docker Tags
 
-Builds are published automatically from the [GitHub repo](https://github.com/growthbook/growthbook) main branch.  The most recent commit is tagged with `latest`. 
+Builds are published automatically from the [GitHub repo](https://github.com/growthbook/growthbook) main branch. The most recent commit is tagged with `latest`.
 
 GitHub Releases are also tagged using SemVer (e.g. `0.2.1`).
 
@@ -79,5 +79,5 @@ If you are using docker-compose, and assuming you specify the growthbook contain
 ```bash
 docker-compose pull growthbook
 docker-compose stop growthbook
-docker-compose up -d --no-deps growthbook
+docker-compose up -d growthbook
 ```
