--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -25,7 +25,7 @@ To effectively use Growth Book, you'll need to tell us a little about the shape 
 
 Growth Book can work with your existing SQL data, no matter what shape or format it is in, whether you have a strongly normalized schema, a single “events” table with JSON fields, or something in between.
 
-Growth Book just needs three base SQL queries plus one additional SQL query for each metric. Writing this SQL is a (mostly) one-time setup task. After defining these base queries and metrics, they can be reused across many experiments.
+Growth Book just needs two base SQL queries plus one additional SQL query for each metric. Writing this SQL is a (mostly) one-time setup task. After defining these base queries and metrics, they can be reused across many experiments.
 
 Don’t worry about the potentially huge number of rows returned by these raw queries. They are never run directly as-is and are instead combined, filtered, and aggregated as part of larger queries. Most of the final queries run by Growth Book result in fewer than 10 rows returned.
 
@@ -65,7 +65,7 @@ In addition to the standard 5 columns above, you can return additional dimension
 
 This needs to return one row for every page view (or similar event) in your app. This is used to analyze historical user behavior. For example, we can use this data to predict how long an experiment will take before you start. As another example, we can use this to plot your overall metric conversion rates over time.
 
-The end result should be almost the same as the experiment query above, but without `experiment_id` and `variation_id` columns:
+The end result should return data like this:
 
 | user_id | anonymous_id | timestamp           | url     |
 | ------- | ------------ | ------------------- | ------- |
@@ -85,30 +85,6 @@ FROM
 ```
 
 Similar to the experiment query, don’t worry about duplicate rows or ordering. Just make sure the column names you select exactly match the above.
-
-#### 3. Users Query
-
-This last base query is only needed if you have both logged-out and logged-in users on your site. It is used to join the logged-in user id to an anonymous id (e.g. from a cookie). This helps Growth Book properly attribute metric conversions.
-
-The end result should be a simple many-to-many mapping with all the known combinations of user_id and anonymous_id:
-
-| user_id | anonymous_id |
-| ------- | ------------ |
-| 123     | abcdef       |
-| 123     | bcdefg       |
-| 456     | fedcba       |
-
-If using Segment to populate your data warehouse, you can use the default `identifies` table:
-
-```sql
-SELECT
-  user_id,
-  anonymous_id
-FROM
-  identifies
-```
-
-Like the other queries, no need to worry about duplicates or sorting. Just return the two columns above and you’re good to go.
 
 ### Mixpanel
 
