--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -86,6 +86,33 @@ FROM
 
 Similar to the experiment query, don’t worry about duplicate rows or ordering. Just make sure the column names you select exactly match the above.
 
+#### 3. Jupyter Notebook Query Runner
+
+This setting is only required if you want to export experiment results as a Jupyter Notebook.
+
+There is no one standard way to store credentials or run SQL queries from Jupyter notebooks, so GrowthBook lets you define your own Python function.
+
+It needs to be called `runQuery`, accept a single string argument named `sql`, and return a pandas data frame.
+
+Here's an example for a Postgres (or Redshift) data source:
+
+```python
+import os
+import psycopg2
+import pandas as pd
+from sqlalchemy import create_engine, text
+
+# Use environment variables or similar for passwords!
+password = os.getenv('POSTGRES_PW')
+connStr = f'postgresql+psycopg2://user:{password}@localhost'
+dbConnection = create_engine(connStr).connect();
+
+def runQuery(sql):
+  return pd.read_sql(text(sql), dbConnection)
+```
+
+**Note:** This python source is stored as plain text in the database. Do not hard-code passwords or sensitive info. Use environment variables (shown above) or another credential store instead.
+
 ### Mixpanel
 
 We query Mixpanel using JQL. We have sensible defaults for the event and property names, but you can change them if you need to.
