Switch back-end to use gbstats library for analysis, show raw query results as rows.

--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -11,8 +11,7 @@ GrowthBook gives you the flexibility and power of a fully-featured in-house A/B 
 
 We believe A/B testing should sit on top of your **existing data and metrics**, wherever they live and however they are defined.
 
-We believe in **data transparency**. GrowthBook
-tells you exactly how your data is being queried and our stats engine is developed out in the open on [GitHub](https://github.com/growthbook/growthbook/tree/main/packages/back-end/src/python/bayesian).
+We believe in **data transparency**. You can export results as a Jupyter notebook and our Bayesian stats engine is developed out in the open on [GitHub](https://github.com/growthbook/growthbook/tree/main/packages/stats).
 
 We are fanatical about **performance**. Our [Client Libraries](/lib) are crazy fast and light-weight and evaluate everything locally with no network requests.
 
