--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -213,7 +213,7 @@ The settings tell GrowthBook how to query your data.
 
 #### SQL Data Sources
 
-For data sources that support SQL, there are 2 queries you need to define:
+For data sources that support SQL, there are 2 queries you need to define plus an optional Python script to run queries from inside a Jupyter notebook:
 
 ```yml
 type: postgres
@@ -241,6 +241,21 @@ settings:
         path as url
       FROM
         pages
+  # Used when exporting experiment results to a Jupyter notebook
+  # Define a `runQuery(sql)` function that returns a pandas data frame
+  notebookRunQuery: >
+    import os
+    import psycopg2
+    import pandas as pd
+    from sqlalchemy import create_engine, text
+
+    # Use environment variables or similar for passwords!
+    password = os.getenv('POSTGRES_PW')
+    connStr = f'postgresql+psycopg2://user:{password}@localhost'
+    dbConnection = create_engine(connStr).connect();
+
+    def runQuery(sql):
+      return pd.read_sql(text(sql), dbConnection)
 ```
 
 #### Mixpanel
@@ -295,7 +310,7 @@ winRisk: 0.0025
 loseRisk: 0.0125
 # Min number of conversions for an experiment variation before we reveal results
 minSampleSize: 150
-# The "suspicious" threshold. If the percent change for a variation is above this, 
+# The "suspicious" threshold. If the percent change for a variation is above this,
 #   we hide the result and label it as suspicious.
 # Default 0.5 = 50% change
 maxPercentChange: 0.50
